--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/signUpFragment">
 
+    <fragment
+        android:id="@+id/signInFragment2"
+        android:name="com.a1danz.feature_authorization.presentation.screens.signin.SignInFragment"
+        android:label="SignInFragment" />
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="com.a1danz.feature_authorization.presentation.screens.signup.SignUpFragment"
+        android:label="SignUpFragment" />
 </navigation>
