adding universal vm factories & changed in design

--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
 
     <style name="TextView.Medium" parent="TextView">
         <item name="android:fontFamily">@font/rubik_medium</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="TextView.SemiBold" parent="TextView">
