--- a/feature-authorization/src/main/res/layout/fragment_signin.xml
+++ b/feature-authorization/src/main/res/layout/fragment_signin.xml
@@ -71,26 +71,6 @@
             android:layout_width="match_parent"
             android:paddingTop="10dp"
             />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/cb_follow_me"
-
-                style="@style/AuthCheckBox"
-                android:text="@string/remember_me"
-                android:layout_weight="1"/>
-
-            <Button
-                android:id="@+id/btn_move_to_register"
-
-
-                style="@style/AuthMoveBtn"
-                android:text="@string/register"
-                />
-        </LinearLayout>
 
         <Button
             android:id="@+id/btn_signin"
@@ -99,6 +79,20 @@
             android:text="@string/enter"
             android:layout_marginTop="5dp"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btn_move_to_register"
+
+                style="@style/AuthMoveBtn"
+                android:text="Еще нет аккаунта?"
+                />
+        </LinearLayout>
     </LinearLayout>
 
 
