--- a/feature-settings/src/main/res/layout/fragment_social_media_settings.xml
+++ b/feature-settings/src/main/res/layout/fragment_social_media_settings.xml
@@ -29,12 +29,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
-                    style="@style/TextView.Bold"
+                    style="@style/TextView.SemiBold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="вконтакте"
+                    android:text="Вконтакте"
                     android:textColor="@color/dark"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     />
                 <TextView
                     android:id="@+id/tv_vk_success"
@@ -77,6 +77,7 @@
                 android:id="@+id/spinner"
 
                 style="@style/Widget.AppCompat.Spinner.DropDown"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown"
