--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -22,5 +22,12 @@
         android:layout_height="match_parent"
         android:visibility="visible"
         >
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
+            android:backgroundTint="@color/gray"
+            app:thumbTint="@color/white"
+            />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
