--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -67,6 +67,11 @@
         <item name="android:paddingBottom">10dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/rubik_medium</item>
+    </style>
+
+    <style name="BtnError" parent="BtnPrimary">
+        <item name="android:backgroundTint">@color/error</item>
     </style>
 
     <style name="VkConnectBtn" parent="BtnPrimary">
@@ -96,5 +101,10 @@
 
     <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
         <item name="android:background">@drawable/spinner_shape</item>
+    </style>
+
+    <style name="roundedImageViewOverlay" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">10dp</item>
     </style>
 </resources>
