--- a/feature-settings/src/main/res/values/styles.xml
+++ b/feature-settings/src/main/res/values/styles.xml
@@ -4,4 +4,7 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">10dp</item>
     </style>
+    <style name="roundedImageView20" parent="roundedImageView">
+        <item name="cornerSize">20dp</item>
+    </style>
 </resources>
