--- a/feature-settings/src/main/res/layout/fragment_social_media_settings.xml
+++ b/feature-settings/src/main/res/layout/fragment_social_media_settings.xml
@@ -59,6 +59,7 @@
                     android:id="@+id/layout_vk_data"
 
 
+                    android:visibility="gone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
@@ -84,13 +85,12 @@
                     <TextView
                         android:id="@+id/tv_vk_linked_title"
 
-                        android:visibility="gone"
                         style="@style/TextView.Medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/tv_vk_user_name"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:text="Связанные группы: "
+                        android:text="@string/linked_groups"
                         android:textColor="@color/dark"
                         android:textSize="16sp"/>
                     <TextView
@@ -107,7 +107,7 @@
                         android:textSize="16sp" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <TextView
-                    android:id="@+id/tv_please_do_ouath"
+                    android:id="@+id/tv_vk_please_do_ouath"
 
                     style="@style/TextView.SemiBold"
                     android:visibility="gone"
@@ -223,7 +223,7 @@
                 <TextView
                     android:id="@+id/tv_tg_please_do_ouath"
 
-
+                    android:visibility="gone"
                     style="@style/TextView.SemiBold"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
