--- a/feature-settings/src/main/res/layout/group_item_layout.xml
+++ b/feature-settings/src/main/res/layout/group_item_layout.xml
@@ -11,7 +11,7 @@
         style="@style/TextView.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="group"
+        android:text=""
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_image"
