--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="gray">#ABAAAA</color>
     <color name="primary">#9747FF</color>
     <color name="error">#FF4747</color>
+
+    <color name="secondary">#b298dc</color>
 </resources>
