--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,12 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="roundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">10dp</item>
+    </style>
+    <style name="roundedImageView5" parent="roundedImageView">
+        <item name="cornerSize">5dp</item>
+    </style>
+
 </resources>
