--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -10,11 +10,13 @@
 
     <color name="dark">#4B3D57</color>
     <color name="gray">#ABAAAA</color>
+    <color name="gray_light">#e9ecef</color>
     <color name="primary">#9747FF</color>
     <color name="primary_50">#809747FF</color>
     <color name="primary_75">#BF9747FF</color>
     <color name="error">#FF4747</color>
 
-    <color name="vk_color">#0077FF</color>
+    <color name="vk_color">#4791FF</color>
     <color name="facebook_color">#1977F3</color>
+    <color name="telegram_color">#2AAAED</color>
 </resources>
