add ui for posting process

--- a/feature-create-post/src/main/res/values/styles.xml
+++ b/feature-create-post/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="BottomSheetDialogTheme" parent="Theme.Design.BottomSheetDialog">
         <item name="android:background">@drawable/bottom_sheet_background</item>
     </style>
@@ -8,4 +9,13 @@
     <style name="MaterialSwitch" parent="Widget.Material3.CompoundButton.MaterialSwitch">
         <item name="materialThemeOverlay"></item>
     </style>
+
+    <style name="AppImagePickerTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Измените цвета и стили по вашему желанию -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary</item>
+        <item name="colorAccent">@color/primary</item>
+    </style>
+
+
 </resources>
