--- a/feature-create-post/src/main/res/layout/fragment_create_post.xml
+++ b/feature-create-post/src/main/res/layout/fragment_create_post.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginHorizontal="8dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginHorizontal="8dp">
 
     <TextView
         android:id="@+id/tv_title"
 
         style="@style/TextView.SemiBold"
-        android:text="Публикация поста"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:text="Публикация поста"
         android:textColor="@color/dark"
-        android:layout_marginTop="8dp"/>
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/text_guideline"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.4" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.4"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/editText"
 
@@ -36,198 +37,202 @@
         style="@style/TextView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        app:layout_constraintBottom_toTopOf="@id/text_guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-
-        android:inputType="textMultiLine"
-        android:gravity="top"
-        android:scrollbars="vertical"
-        android:hint="Введите текст здесь"
         android:background="@null"
+        android:gravity="top"
+        android:hint="Введите текст здесь"
+        android:inputType="textMultiLine"
+        android:paddingBottom="3dp"
+
+        android:scrollbars="vertical"
         android:textColor="@color/dark"
         android:textSize="16sp"
-        android:paddingBottom="3dp"/>
+        app:layout_constraintBottom_toTopOf="@id/text_guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintVertical_bias="0.0" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/text_guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_guideline">
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_images"
 
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="horizontal"
-            tools:listitem="@layout/item_rv_attached_image"
             android:layout_marginVertical="0dp"
             android:divider="@drawable/images_divider"
+            android:orientation="horizontal"
             android:showDividers="middle"
-            />
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           android:gravity="center_vertical"
-           android:layout_marginTop="5dp">
-           <LinearLayout
-               android:layout_width="0dp"
-               android:layout_weight="1"
-               android:layout_height="wrap_content"
-               android:orientation="horizontal"
-               android:layout_marginTop="5dp">
-               <TextView
-                   style="@style/TextView.Medium"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:textColor="@color/dark"
-                   android:text="Медиа:"
-                   android:textSize="16sp"/>
-               <TextView
-                   android:id="@+id/tv_media_count"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_rv_attached_image" />
 
-                   style="@style/TextView.Medium"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginStart="5dp"
-                   android:textColor="@color/primary"
-                   android:text=""
-                   android:textSize="16sp"/>
-           </LinearLayout>
-           <androidx.appcompat.widget.AppCompatButton
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Сбросить медиа"
-               android:textSize="10sp"
-               android:background="@drawable/danger_rect"
-               android:layout_gravity="center"
-               android:textAllCaps="false"
-               android:fontFamily="@font/rubik_medium"
-               android:textColor="@color/white"
-               />
-        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginTop="5dp"
             android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/TextView.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Медиа:"
+                    android:textColor="@color/dark"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/tv_media_count"
+
+                    style="@style/TextView.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text=""
+                    android:textColor="@color/primary"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_clear_media"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/danger_rect"
+                android:fontFamily="@font/rubik_medium"
+                android:text="Сбросить медиа"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="10sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
             android:paddingVertical="5dp">
+
             <TextView
                 style="@style/TextView.Medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Выбранные площадки для публикации:"
                 android:textColor="@color/dark"
-                android:text="Выбранные соц. сети:"
                 android:textSize="16sp" />
+
             <LinearLayout
                 android:id="@+id/layout_places"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="start"
-                android:showDividers="middle"
                 android:divider="@drawable/tags_divider"
-                >
-                <TextView
-                    style="@style/TextView"
-
-                    android:visibility="gone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingHorizontal="5dp"
-                    android:paddingVertical="2dp"
-                    android:text="Telegram"
-                    android:textSize="12sp"
-                    android:background="@drawable/tag_background"
-                    android:textColor="@color/white" />
-
-
+                android:gravity="start"
+                android:orientation="horizontal"
+                android:showDividers="middle">
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="0dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="0dp">
+
             <LinearLayout
                 android:id="@+id/layout_edit_media"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:orientation="horizontal"
                 android:paddingVertical="10dp">
+
                 <ImageView
                     android:layout_width="18dp"
                     android:layout_height="18dp"
-                    android:src="@drawable/image_icon"/>
+                    android:src="@drawable/image_icon" />
+
                 <TextView
                     style="@style/TextView.Medium"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="@color/dark"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
                     android:text="Редактировать медиа"
-                    android:layout_marginStart="5dp"/>
+                    android:textColor="@color/dark"
+                    android:textSize="16sp" />
+
                 <TextView
                     style="@style/TextView.Medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="@color/dark"
+                    android:layout_marginStart="5dp"
                     android:text=">"
-                    android:layout_marginStart="5dp"/>
+                    android:textColor="@color/dark"
+                    android:textSize="16sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/layout_edit_social_media"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:paddingVertical="10dp"
-                >
+                android:orientation="horizontal"
+                android:paddingVertical="10dp">
+
                 <ImageView
                     android:layout_width="18dp"
                     android:layout_height="18dp"
-                    android:src="@drawable/pencil_icon"/>
+                    android:src="@drawable/pencil_icon" />
+
                 <TextView
                     style="@style/TextView.Medium"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="@color/dark"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
                     android:text="Настроить социальные сети"
-                    android:layout_marginStart="5dp"/>
+                    android:textColor="@color/dark"
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/btn_configure_social_media"
 
                     style="@style/TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="@color/dark"
+                    android:layout_marginStart="5dp"
                     android:text=">"
-                    android:layout_marginStart="5dp"/>
+                    android:textColor="@color/dark"
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
+
         <Button
             android:id="@+id/btn_publish"
             style="@style/BtnPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Опубликовать"
             android:layout_marginTop="10dp"
-            />
+            android:text="Опубликовать" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
