--- a/feature-create-post/src/main/res/layout/view_tag_social_media.xml
+++ b/feature-create-post/src/main/res/layout/view_tag_social_media.xml
@@ -13,7 +13,7 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:src="@drawable/tg_icon_transparent"
-        android:layout_marginEnd="2dp"
+        android:layout_marginEnd="3dp"
         android:contentDescription="@string/icon" />
     <TextView
         android:id="@+id/tv_name"
@@ -22,5 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
+        android:text="name"
         android:textColor="@color/white"/>
 </LinearLayout>
