--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/postsFragment"
+        android:id="@+id/postsFeedFragment"
         android:title="@string/posts"
         android:icon="@drawable/posts_icon"/>
     <item
